# python-engineering-template

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: e42905241ed3_create_clinical_notes_table.py
frontend/src/: App.tsx
frontend/src/components/: NoteCard.tsx  NoteForm.tsx
frontend/src/hooks/: useNotes.ts
frontend/src/types/: notes.ts
src/app/: __init__.py  api.py  async_service.py  clinical_note.py  config.py  database.py  db_repository.py  models.py  repository.py  schemas.py  service.py
tests/: test_api.py  test_clinical_note.py  test_repository.py  test_service.py
