[project]
name = "python-engineering-template"
version = "0.1.0"
description = "Production Python project template for learning engineering best practices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "httpx2>=0.4.1",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 88
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
]

[tool.ruff.lint.per-file-ignores]
"src/app/api.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/app --cov-report=term-missing"
